# Team-Trainer-Chatbot

./: 01_extract_docling.py  02_test_chunking.py  03_test_retrieval.py  CLAUDE.md  converter.py  indexer.py  log.txt  main.py  mise.toml  output.txt  pyproject.toml  test_retriever.py  teste1.txt  teste2.txt  teste3.txt
agent/: agent.py  bot.py
agent/tools/: rag_tool.py
ai-engine/: indexer.py  main.py  pyproject.toml
ai-engine/agent/: bot.py
ai-engine/agent/tools/: rag_tool.py
ai-engine/data/: active_index.txt
ai-engine/data/Markdown/: 01_NovaMente_Mission_Vision_Values.md  04_NovaMente_Employee_Handbook.md  05_NovaMente_Benefits_Policy.md  06_NovaMente_Compensation_Career_Levels.md  11_NovaMente_Antidiscrimination_Diversity.md  14_NovaMente_Equipment_Technology_Use.md  16_NovaMente_Internal_Regulations.md
ai-engine/prompts/: system_prompt.txt
data/JSON/: 19_NovaMente_Employees.json
data/Markdown/: 02_NovaMente_Company_History_Culture.md  03_NovaMente_Organizational_Structure.md  07_NovaMente_Vacation_Leave_Attendance.md  08_NovaMente_Recruitment_Selection.md  09_NovaMente_Training_Development.md  10_NovaMente_Code_of_Ethics_Conduct.md  12_NovaMente_LGPD_Data_Privacy.md  13_NovaMente_Information_Security.md  15_NovaMente_Health_Safety.md  17_NovaMente_Internal_Communication.md  18_NovaMente_Standard_Operating_Procedures.md
gateway/: go.mod  main.go
indexer/: indexer.py  indexer_test.py
prompts/: system_prompt.txt
